[package]
name = "iris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
