[package]
name = "iris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { features = ["default", "native-tls"], version = "0.18.0" }
clap = { features = ["derive"], version = "4.1.4" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hyper = { features = ["client", "http1", "http2"], version = "0.14.24" }
hyper-tls = "0.5.0"
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { features = ["full"], version = "1" }
url = "2.3.1"
